Text to speech reads text message actions

BUG:309149
FIXED-IN:0.7.0
Reviewed-By:David Edmundson